operator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee-operator
  template:
    metadata:
      labels:
        app: employee-operator
    spec:
      serviceAccountName: employee-operator
      containers:
      - name: operator
        image: anjalikfti24/employee-operator:1.2
        imagePullPolicy: Always
        command: ["kopf", "run", "--standalone", "operator.py"]
