service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-api
spec:
  selector:
    app: employee-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
