deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee-api
  template:
    metadata:
      labels:
        app: employee-api
    spec:
      serviceAccountName: employee-api
      containers:
      - name: employee-api
        image: anjalikfti24/employee-api:1.2
        imagePullPolicy: Always
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: employee-api
spec:
  selector:
    app: employee-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: employee-api
spec:
  to:
    kind: Service
    name: employee-api
  port:
    targetPort: 80
